finally fix reading congrats + encouragment
